<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="no_banner_ads">No banner ads</string>
    <string name="no_pop_up_ads">No pop-up ads</string>
    <string name="priority_service">Priority service</string>
    <string name="start_free_trial">Start free trial</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="restore_purchases"><u>Restore purchases</u></string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="five_days_for_free">5 days for free. After the end of the free version the price is free per month. Canceled at any time.</string>
    <string name="description_subscribe">This subscription disables all types of advertising in our entertainment application, and also gives priority service by email if you write to us by mail. After the trial ends, you will be billed $3.99 for a 1-month subscription, which will be automatically renewed for $3.99 each month. By signing up, you agree to our terms and conditions and privacy policy. How to cancel a subscription, you can find out in the Menu - Information.</string>
    <string name="information">Information</string>
    <string name="app_name" translatable="false">Smart Cleaner:\nPhone Clean</string>
    <string name="version_code_S">v %s</string>
    <string name="how_to_cancel_subscription">How to cancel subscription</string>
    <string name="terms_conditions">Terms of Use</string>
    <string name="privacy_policy_not_U">Privacy Policy</string>
    <string name="ok">OK</string>

</resources>