<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="ui.InformationScreenFragment">

    <bogatovnikita.toolbar.ui.ToolbarView
        android:id="@+id/custom_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        app:is_load_language="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:show_cross="true"
        app:show_flag="false"
        app:show_menu="false"
        app:title_text="@string/information" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="@dimen/_24sdp"
        app:layout_constraintBottom_toTopOf="@id/title_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="@dimen/_165sdp"
            android:layout_height="@dimen/_165sdp"
            android:layout_gravity="center"
            android:src="@drawable/ico" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title_name"
        style="@style/Text.Medium.24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/version_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <TextView
        android:id="@+id/version_code"
        style="@style/Text.Medium.12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/guideline_for_links"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_name"
        tools:text="@string/version_code_S" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_for_links"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/cancel_subscription"
        style="@style/Text.Medium.16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/how_to_cancel_subscription"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/terms_and_conditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_for_links"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/terms_and_conditions"
        style="@style/Text.Medium.16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/terms_conditions"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/privacy_policy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cancel_subscription" />

    <TextView
        android:id="@+id/privacy_policy"
        style="@style/Text.Medium.16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/privacy_policy_not_U"
        android:textColor="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/terms_and_conditions" />
</androidx.constraintlayout.widget.ConstraintLayout>